# lsis-afs-test-vectors

./: .gitignore  CHANGELOG.md  CITATION.cff  CORRECTNESS.md  INTEROP-ROUNDROBIN.md  LICENSE  README.md  manifest.json  message.txt  pyproject.toml  validate.py
.github/workflows/: verify-pocketsdr-decode-linux.yml  verify.yml
codes/: codes_prn001.hex  codes_prn002.hex  codes_prn003.hex  codes_prn004.hex  codes_prn005.hex  codes_prn006.hex  codes_prn007.hex  codes_prn008.hex  codes_prn009.hex  codes_prn010.hex  codes_prn011.hex  codes_prn012.hex  codes_prn013.hex  codes_prn014.hex  codes_prn015.hex  codes_prn016.hex  codes_prn017.hex  codes_prn018.hex  codes_prn019.hex  codes_prn020.hex  codes_prn021.hex  codes_prn022.hex  codes_prn023.hex  codes_prn024.hex  codes_prn025.hex  codes_prn026.hex  codes_prn027.hex  codes_prn028.hex  codes_prn029.hex  codes_prn030.hex  codes_prn031.hex  codes_prn032.hex  codes_prn033.hex  codes_prn034.hex  codes_prn035.hex  codes_prn036.hex  codes_prn037.hex  codes_prn038.hex  codes_prn039.hex  codes_prn040.hex  (+170 more)
references/: README.md
references/annex-3/: 006_GoldCode2046hex210prns.txt  007_l1cp_hex210prns.txt  008_Weil1500hex210prns.txt  README.md
references/lans-afs-sim/: README.md
references/lans-afs-sim/harnesses/: README.md  dump_l2_test_vectors.py  dump_lans_codes.c  dump_lans_frame.c  verify_oracle.py
references/pocketsdr-afs/: README.md
references/pocketsdr-afs/harnesses/: README.md  decode_signal.py  lsisiq_to_pocketsdr.py  parse_pocketsdr_log.py  verify_pocketsdr_decode.py
references/pocketsdr-afs/harnesses/patches/: clang17-build-fix.patch  dump-symbols.patch
tests/: test_validate.py
