[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lsis-afs-test-vectors"
version = "0.2.1"
description = "Staged LSIS-AFS interoperability test-vector package (Levels 1–5). v0.2.1 ships Level 1 spreading codes (210 PRNs), Level 2 encoded frames (5 standard test messages + 1 boundary frame), and the canonical pre-encode SB2/SB3/SB4 input bytes that produced each frame — letting any team feed the documented inputs into their encoder and bit-compare against the shipped frames. Validated against LNIS AD1 Volume A Annex 3, LANS-AFS-SIM (independent), and the LSIS V1.0 §2.4 structural rules. The Apache-2.0 source for the LANS-AFS-SIM dump harnesses ships alongside for end-to-end reproducibility."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["LSIS-AFS", "LunaNet", "PNT", "GNSS", "spreading-codes", "CCSDS", "ESA", "interoperability", "test-vectors"]
authors = [{ name = "Marco Fiscato" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.scripts]
lsis-afs-validate = "validate:main"

[project.urls]
Repository = "https://github.com/luar-space/lsis-afs-test-vectors"
Issues = "https://github.com/luar-space/lsis-afs-test-vectors/issues"

[tool.hatch.build.targets.wheel]
only-include = [
    "validate.py",
    "codes",
    "frames",
    "inputs",
    "references",
    "manifest.json",
    "README.md",
    "CORRECTNESS.md",
    "CHANGELOG.md",
    "CITATION.cff",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "validate.py",
    "codes",
    "frames",
    "inputs",
    "references",
    "manifest.json",
    "README.md",
    "CORRECTNESS.md",
    "CHANGELOG.md",
    "CITATION.cff",
    "LICENSE",
    "pyproject.toml",
    "tests",
    ".github/workflows/verify.yml",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle + pyflakes
    "I",               # isort
    "N",               # pep8-naming
    "UP",              # pyupgrade
    "B",               # flake8-bugbear
    "SIM",             # flake8-simplify
    "PL",              # pylint
    "RUF",             # ruff-specific
]
ignore = [
    "PLR2004",         # magic numbers are fine in a validator of fixed-length formats
    "PLR0913",         # "too many arguments" — argparse callbacks set by design
    "RUF002",          # `×` in docstrings/comments is intentional (math notation)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
